Adds to unit converter and new friction coefficient library tool

--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -76,7 +76,7 @@
             border: 1px solid var(--border);
             box-shadow: var(--shadow);
             display: grid;
-            grid-template-columns: 1fr 1fr 0.9fr;
+            grid-template-columns: minmax(220px, 0.9fr) minmax(260px, 1fr) minmax(260px, 1fr) minmax(240px, 0.9fr);
             overflow: hidden;
         }
 
@@ -86,6 +86,12 @@
             display: flex;
             flex-direction: column;
             gap: 24px;
+        }
+
+        .dual-panel-header {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .dual-panel-header h1 {
@@ -104,6 +110,38 @@
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(110px, 1fr));
             gap: 8px;
+        }
+
+        .dual-panel-quantity {
+            gap: 18px;
+        }
+
+        .dual-panel-quantity .quantity-panel-group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        .panel-label {
+            font-size: 0.78rem;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: var(--muted);
+        }
+
+        .panel-helper {
+            font-size: 0.85rem;
+            color: var(--muted);
+            line-height: 1.4;
+        }
+
+        .dual-panel-quantity .quantity-chip-row {
+            grid-template-columns: 1fr;
+            grid-auto-rows: minmax(38px, auto);
+            max-height: clamp(420px, 70vh, 680px);
+            overflow-y: auto;
+            padding-right: 4px;
         }
 
         .quantity-chip {
@@ -135,6 +173,11 @@
             font-weight: 600;
             color: var(--muted);
             margin-bottom: 8px;
+        }
+
+        .dual-panel[data-side="left"] .dual-panel-header,
+        .dual-panel[data-side="right"] .dual-panel-header {
+            min-height: 132px;
         }
 
         .value-stack input[type="number"] {
@@ -294,6 +337,10 @@
                 border-right: none;
                 border-bottom: 1px solid var(--border);
             }
+            .dual-panel-quantity .quantity-chip-row {
+                max-height: none;
+                overflow-y: visible;
+            }
             .dual-info {
                 border-left: none;
                 border-top: 1px solid var(--border);
@@ -311,13 +358,24 @@
 
     <main class="container">
     <div class="dual-shell" data-dual>
-        <section class="dual-panel" data-side="left">
+        <section class="dual-panel dual-panel-quantity">
             <div class="dual-panel-header">
                 <h1>Unit Converter</h1>
                 <p>All the essentials—clean typography, quick filtering, and dual inputs that stay synchronised while you work.</p>
             </div>
 
-            <div class="quantity-chip-row" data-role="quantity-row"></div>
+            <div class="quantity-panel-group">
+                <span class="panel-label">Quantity</span>
+                <p class="panel-helper">Choose the measurement family you want to work with, then set your values to the right.</p>
+                <div class="quantity-chip-row" data-role="quantity-row"></div>
+            </div>
+        </section>
+
+        <section class="dual-panel" data-side="left">
+            <div class="dual-panel-header">
+                <h1>From value</h1>
+                <p>Enter a known measurement and pick its unit to convert from.</p>
+            </div>
 
             <div class="value-stack">
                 <label for="left-value">From value</label>
