Adds snapfits, materials, and beverages.py for silly coffee temp estimator

--- a/index.html
+++ b/index.html
@@ -154,6 +154,30 @@
         letter-spacing: 0.02em;
       }
 
+      .tag--human-verified {
+        background: #dcfce7;
+        color: #166534;
+        border: 1px solid #86efac;
+        font-weight: 600;
+        display: inline-flex;
+        align-items: center;
+        gap: 0.35rem;
+      }
+
+      .tag--human-verified::before {
+        content: "HV";
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.7rem;
+        font-weight: 700;
+        width: 1.1rem;
+        height: 1.1rem;
+        border-radius: 999px;
+        background: #166534;
+        color: #fff;
+      }
+
       .card a {
         margin-top: auto;
         align-self: flex-start;
@@ -236,6 +260,16 @@
       const emptyState = document.getElementById("empty-state");
       const year = document.getElementById("year");
 
+      const HUMAN_VERIFIED_TAGS = new Set([
+        "human-verified",
+        "human verified",
+        "human_checked",
+        "human checked",
+        "human-reviewed",
+        "human reviewed",
+      ]);
+      const HUMAN_VERIFIED_LABEL = "Human Verified";
+
       let tools = [];
 
       year.textContent = new Date().getFullYear();
@@ -310,10 +344,27 @@
           if (tool.tags?.length) {
             const tagsContainer = document.createElement("div");
             tagsContainer.className = "tags";
+            let humanTagRendered = false;
             tool.tags.forEach((tag) => {
               const tagEl = document.createElement("span");
-              tagEl.className = "tag";
-              tagEl.textContent = tag;
+              const normalizedTag = String(tag).trim().toLowerCase();
+
+              if (
+                HUMAN_VERIFIED_TAGS.has(normalizedTag) &&
+                !humanTagRendered
+              ) {
+                tagEl.className = "tag tag--human-verified";
+                tagEl.textContent = HUMAN_VERIFIED_LABEL;
+                tagEl.title =
+                  "This tool has been reviewed and confirmed by a human maintainer.";
+                humanTagRendered = true;
+              } else if (HUMAN_VERIFIED_TAGS.has(normalizedTag)) {
+                return;
+              } else {
+                tagEl.className = "tag";
+                tagEl.textContent = tag;
+              }
+
               tagsContainer.appendChild(tagEl);
             });
             card.appendChild(tagsContainer);
