--- a/tools/example_tool/index.html
+++ b/tools/example_tool/index.html
@@ -95,6 +95,10 @@
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
         #results-display { background-color: var(--bg-color); border-radius: 6px; padding: 16px; margin-bottom: 1.5rem; }
         #plot-container { width: 100%; min-height: 350px; background-color: var(--bg-color); border: 1px dashed var(--border-color); border-radius: 6px; display: flex; align-items: center; justify-content: center; color: var(--text-light); }
+        .chart-checklist { margin-top: 16px; border: 1px solid var(--border-color); border-radius: 6px; background-color: var(--bg-card); padding: 12px 16px; }
+        .chart-checklist summary { font-weight: 600; color: var(--secondary-color); }
+        .chart-checklist ul { padding-left: 20px; margin-top: 8px; }
+        .chart-checklist li { margin-bottom: 6px; color: var(--text-light); }
 
         /* --- 7b. Inline Result Details --- */
         .result-item { padding: 10px 0; border-bottom: 1px solid var(--border-color); }
@@ -209,6 +213,17 @@
                     <div id="plot-container">
                         <p>Plot will appear here after calculation.</p>
                     </div>
+                    <details class="chart-checklist">
+                        <summary>Chart checklist</summary>
+                        <ul>
+                            <li>Axes are labeled and include units.</li>
+                            <li>Legend is present and matches the plotted series.</li>
+                            <li>Scale type is correct and stated (linear or log).</li>
+                            <li>Plotted values are finite (no NaN or infinity gaps).</li>
+                            <li>Ranges look physically plausible for the inputs.</li>
+                            <li>Annotations reflect the correct numeric values.</li>
+                        </ul>
+                    </details>
                 </div>
 
                 <div id="background" class="tab-content">
