--- a/tools/example_tool/index.html
+++ b/tools/example_tool/index.html
@@ -12,41 +12,48 @@
     <style>
         /* --- 1. Global Styles & Variables --- */
         :root {
-            --primary-color: #212529;
-            --primary-light: #f8f9fa;
-            --secondary-color: #495057;
-            --text-color: #212529;
-            --text-light: #6c757d;
-            --border-color: #dee2e6;
-            --bg-color: #f8f9fa;
+            --primary-color: #0b0d12;
+            --primary-light: #f4f5f7;
+            --secondary-color: #4b5563;
+            --accent-color: #111827;
+            --success-color: #0f766e;
+            --warning-color: #b45309;
+            --danger-color: #b91c1c;
+            --text-color: #111827;
+            --text-light: #6b7280;
+            --border-color: #e5e7eb;
+            --bg-color: #f8f9fb;
             --bg-card: #ffffff;
-            --shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
+            --shadow: 0 1px 2px rgba(15, 23, 42, 0.08);
+            --shadow-lg: 0 6px 18px rgba(15, 23, 42, 0.08);
             --border-radius: 8px;
+            --font-sans: 'Helvetica Neue', 'Avenir Next', 'Univers', 'Helvetica', sans-serif;
+            --font-mono: 'SF Mono', 'Menlo', 'Monaco', monospace;
         }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         html, body { height: 100%; }
         body {
-            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
+            font-family: var(--font-sans);
             line-height: 1.6;
             background-color: var(--bg-color);
             color: var(--text-color);
             display: flex;
             flex-direction: column;
         }
-        .container { width: 90%; max-width: 1200px; margin: 0 auto; padding: 20px 0; }
+        .container { width: 92%; max-width: 1400px; margin: 0 auto; padding: 24px 0; }
         h1, h2, h3, h4 { color: var(--primary-color); margin-bottom: 0.75em; line-height: 1.2; font-weight: 600; }
-        h1 { font-size: 2.25rem; }
-        h2 { font-size: 1.75rem; border-bottom: 2px solid var(--border-color); padding-bottom: 10px; }
-        h3 { font-size: 1.25rem; color: var(--secondary-color); }
-        h4 { font-size: 1rem; color: var(--text-color); }
+        h1 { font-size: 2.25rem; letter-spacing: -0.01em; }
+        h2 { font-size: 1.4rem; border-bottom: 1px solid var(--border-color); padding-bottom: 10px; }
+        h3 { font-size: 1.05rem; color: var(--secondary-color); }
+        h4 { font-size: 0.95rem; color: var(--text-color); }
         p { margin-bottom: 1em; color: var(--text-light); }
-        a { color: var(--secondary-color); text-decoration: none; font-weight: 500; }
+        a { color: var(--accent-color); text-decoration: none; font-weight: 500; }
         a:hover { text-decoration: underline; }
 
         /* --- 2. Navigation --- */
-        .navbar { background-color: var(--bg-card); border-bottom: 1px solid var(--border-color); box-shadow: 0 2px 4px rgba(0, 0, 0, 0.03); padding: 0 5%; }
-        .nav-container { display: flex; justify-content: space-between; align-items: center; height: 60px; max-width: 1200px; margin: 0 auto; }
-        .nav-brand { font-size: 1.5rem; font-weight: 600; color: var(--primary-color); }
+        .navbar { background-color: var(--bg-card); border-bottom: 1px solid var(--border-color); box-shadow: none; padding: 0 5%; }
+        .nav-container { display: flex; justify-content: space-between; align-items: center; height: 64px; max-width: 1400px; margin: 0 auto; }
+        .nav-brand { font-size: 1.35rem; font-weight: 600; color: var(--text-color); }
         .nav-brand:hover { text-decoration: none; }
 
         /* --- 3. Main Tool Layout --- */
@@ -71,31 +78,108 @@
         .tool-inputs h2 { margin-top: 0; }
         .input-group { margin-bottom: 1.25rem; position: relative; }
         .input-group label { display: block; font-weight: 600; margin-bottom: 6px; font-size: 0.9rem; }
-        .input-group input[type="number"], .input-group input[type="text"], .input-group select { width: 100%; padding: 10px 12px; border: 1px solid var(--border-color); border-radius: 6px; font-size: 1rem; transition: border-color 0.2s, box-shadow 0.2s; }
-        .input-group input:focus { outline: none; border-color: var(--primary-color); box-shadow: 0 0 0 3px var(--primary-light); }
+        .input-group input[type="number"], .input-group input[type="text"], .input-group select {
+            width: 100%;
+            padding: 12px 14px;
+            padding-right: 38px;
+            border: 1px solid var(--border-color);
+            border-radius: 6px;
+            font-size: 1rem;
+            transition: border-color 0.2s, box-shadow 0.2s;
+            background: #fff;
+        }
+        .input-group input:focus, .input-group select:focus {
+            outline: none;
+            border-color: var(--text-color);
+            box-shadow: 0 0 0 3px rgba(17, 24, 39, 0.08);
+        }
+        .input-group select {
+            cursor: pointer;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: none;
+        }
+        .input-group input[type="number"]::-webkit-inner-spin-button,
+        .input-group input[type="number"]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        .input-group input[type="number"] { -moz-appearance: textfield; }
         
         /* --- 5. Input Tooltip --- */
-        .tooltip-trigger { display: inline-block; width: 18px; height: 18px; background-color: var(--border-color); color: var(--text-light); border-radius: 50%; text-align: center; font-size: 12px; font-weight: bold; line-height: 18px; cursor: help; position: absolute; right: -24px; top: 38px; }
-        .tooltip-trigger::after { content: attr(data-tooltip); position: absolute; bottom: 125%; left: 50%; transform: translateX(-50%); background-color: var(--text-color); color: white; padding: 8px 12px; border-radius: 6px; font-size: 13px; font-weight: 400; line-height: 1.4; white-space: nowrap; opacity: 0; visibility: hidden; transition: opacity 0.2s, visibility 0.2s; z-index: 10; }
+        .tooltip-trigger {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 18px;
+            height: 18px;
+            background-color: #f1f5f9;
+            border: 1px solid var(--border-color);
+            color: var(--text-light);
+            border-radius: 50%;
+            text-align: center;
+            font-size: 11px;
+            font-weight: bold;
+            line-height: 18px;
+            cursor: help;
+            position: absolute;
+            right: 8px;
+            top: 38px;
+        }
+        .tooltip-trigger::after {
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: 130%;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: var(--text-color);
+            color: white;
+            padding: 10px 14px;
+            border-radius: 8px;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 1.5;
+            white-space: normal;
+            width: 220px;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.2s, visibility 0.2s;
+            z-index: 10;
+            box-shadow: var(--shadow-lg);
+        }
         .tooltip-trigger:hover::after { opacity: 1; visibility: visible; }
 
         /* --- 6. Button Styles --- */
         .btn { display: inline-block; padding: 10px 16px; font-size: 1rem; font-weight: 600; border: none; border-radius: 6px; cursor: pointer; text-align: center; transition: background-color 0.2s, box-shadow 0.2s; }
-        .btn-primary { background-color: var(--primary-color); color: white; width: 100%; font-size: 1.1rem; padding: 12px; }
-        .btn-primary:hover { background-color: #000000; }
-        .btn-secondary { background-color: var(--bg-card); color: var(--text-color); border: 1px solid var(--border-color); }
+        .btn-primary { background-color: var(--text-color); color: white; width: 100%; font-size: 1.1rem; padding: 12px; }
+        .btn-primary:hover { background-color: #050608; }
+        .btn-secondary { background-color: transparent; color: var(--text-color); border: 1px solid var(--border-color); }
         .btn-secondary:hover { background-color: var(--primary-light); }
 
         /* --- 7. Output Section --- */
-        .tabs { display: flex; border-bottom: 2px solid var(--border-color); margin-bottom: 24px; }
-        .tab-link { padding: 10px 16px; cursor: pointer; background-color: transparent; border: none; font-size: 1rem; font-weight: 500; color: var(--text-light); border-bottom: 3px solid transparent; margin-bottom: -2px; }
-        .tab-link:hover { background-color: var(--primary-light); }
-        .tab-link.active { color: var(--primary-color); font-weight: 600; border-bottom-color: var(--primary-color); }
+        .tabs { display: flex; border-bottom: 1px solid var(--border-color); margin-bottom: 24px; gap: 4px; }
+        .tab-link {
+            padding: 12px 16px;
+            cursor: pointer;
+            background-color: transparent;
+            border: none;
+            font-size: 0.85rem;
+            font-weight: 600;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: var(--text-light);
+            border-bottom: 2px solid transparent;
+            margin-bottom: -2px;
+            transition: color 0.2s ease;
+        }
+        .tab-link:hover { color: var(--text-color); }
+        .tab-link.active { color: var(--text-color); border-bottom-color: var(--text-color); }
         .tab-content { display: none; animation: fadeIn 0.5s; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-        #results-display { background-color: var(--bg-color); border-radius: 6px; padding: 16px; margin-bottom: 1.5rem; }
-        #plot-container { width: 100%; min-height: 350px; background-color: var(--bg-color); border: 1px dashed var(--border-color); border-radius: 6px; display: flex; align-items: center; justify-content: center; color: var(--text-light); }
-        .chart-checklist { margin-top: 16px; border: 1px solid var(--border-color); border-radius: 6px; background-color: var(--bg-card); padding: 12px 16px; }
+        #results-display { background-color: var(--primary-light); border-radius: 6px; padding: 16px; margin-bottom: 1.5rem; }
+        #plot-container { width: 100%; min-height: 350px; background-color: var(--primary-light); border: 1px dashed var(--border-color); border-radius: 6px; display: flex; align-items: center; justify-content: center; color: var(--text-light); }
+        .chart-checklist { margin-top: 16px; border: 1px solid var(--border-color); border-radius: var(--border-radius); background-color: var(--bg-card); padding: 12px 16px; }
         .chart-checklist summary { font-weight: 600; color: var(--secondary-color); }
         .chart-checklist ul { padding-left: 20px; margin-top: 8px; }
         .chart-checklist li { margin-bottom: 6px; color: var(--text-light); }
@@ -132,8 +216,6 @@
         /* --- 9. Responsive Layout --- */
         @media (max-width: 900px) {
             .tool-layout { grid-template-columns: 1fr; }
-            .tooltip-trigger { right: 0px; }
-            .input-group { padding-right: 24px; }
         }
     </style>
 </head>
