initial work on orders of magnitude and improved advanced template

--- a/tools/example_tool_advanced/index.html
+++ b/tools/example_tool_advanced/index.html
@@ -31,6 +31,19 @@
             --border-radius: 8px;
             --font-sans: 'Helvetica Neue', 'Avenir Next', 'Univers', 'Helvetica', system-ui, sans-serif;
             --font-mono: 'SF Mono', 'Menlo', 'Monaco', monospace;
+            /* Light mode specific colors */
+            --btn-primary-bg: #111827;
+            --btn-primary-text: #ffffff;
+            --tooltip-bg: #111827;
+            --tooltip-text: #ffffff;
+            --callout-info-bg: #dbeafe;
+            --callout-info-border: #3b82f6;
+            --callout-warning-bg: #fef3c7;
+            --callout-warning-border: #f59e0b;
+            --callout-danger-bg: #fef2f2;
+            --callout-danger-border: #ef4444;
+            --callout-success-bg: #d1fae5;
+            --callout-success-border: #22c55e;
         }
         /* Dark theme */
         body[data-theme="dark"] {
@@ -48,6 +61,19 @@
             --bg-card: #111827;
             --shadow: 0 1px 2px rgba(0, 0, 0, 0.45);
             --shadow-lg: 0 16px 32px rgba(0, 0, 0, 0.55);
+            /* Dark mode specific colors */
+            --btn-primary-bg: #3b82f6;
+            --btn-primary-text: #ffffff;
+            --tooltip-bg: #1f2937;
+            --tooltip-text: #f9fafb;
+            --callout-info-bg: #1e3a5f;
+            --callout-info-border: #3b82f6;
+            --callout-warning-bg: #422006;
+            --callout-warning-border: #f59e0b;
+            --callout-danger-bg: #450a0a;
+            --callout-danger-border: #ef4444;
+            --callout-success-bg: #052e16;
+            --callout-success-border: #22c55e;
         }
         /* System theme - follows OS preference */
         @media (prefers-color-scheme: dark) {
@@ -66,6 +92,19 @@
                 --bg-card: #111827;
                 --shadow: 0 1px 2px rgba(0, 0, 0, 0.45);
                 --shadow-lg: 0 16px 32px rgba(0, 0, 0, 0.55);
+                /* Dark mode specific colors */
+                --btn-primary-bg: #3b82f6;
+                --btn-primary-text: #ffffff;
+                --tooltip-bg: #1f2937;
+                --tooltip-text: #f9fafb;
+                --callout-info-bg: #1e3a5f;
+                --callout-info-border: #3b82f6;
+                --callout-warning-bg: #422006;
+                --callout-warning-border: #f59e0b;
+                --callout-danger-bg: #450a0a;
+                --callout-danger-border: #ef4444;
+                --callout-success-bg: #052e16;
+                --callout-success-border: #22c55e;
             }
         }
         * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -186,6 +225,7 @@
             font-size: 0.95rem;
             font-family: var(--font-sans);
             background: var(--bg-card);
+            color: var(--text-color);
             transition: border-color 0.15s ease;
         }
         .input-group input:focus, .input-group select:focus {
@@ -218,7 +258,7 @@
         .tooltip-trigger::after {
             content: attr(data-tooltip);
             position: absolute; bottom: 130%; left: 50%; transform: translateX(-50%);
-            background-color: var(--text-color); color: white;
+            background-color: var(--tooltip-bg); color: var(--tooltip-text);
             padding: 10px 14px; border-radius: 8px;
             font-size: 12px; font-weight: 400; line-height: 1.5;
             white-space: normal; width: 240px;
@@ -277,9 +317,9 @@
         .slider-labels { display: flex; justify-content: space-between; font-size: 0.75rem; color: var(--text-light); margin-top: 4px; }
 
         /* Buttons */
-        .btn { display: inline-block; padding: 12px 16px; font-size: 1rem; font-weight: 600; border: none; border-radius: var(--border-radius); cursor: pointer; text-align: center; transition: background-color 0.15s; }
-        .btn-primary { background-color: var(--accent-color); color: white; width: 100%; }
-        .btn-primary:hover { background-color: #050608; }
+        .btn { display: inline-block; padding: 12px 16px; font-size: 1rem; font-weight: 600; border: none; border-radius: var(--border-radius); cursor: pointer; text-align: center; transition: background-color 0.15s, opacity 0.15s; }
+        .btn-primary { background-color: var(--btn-primary-bg); color: var(--btn-primary-text); width: 100%; }
+        .btn-primary:hover { opacity: 0.9; }
         .btn-secondary { background-color: transparent; color: var(--text-color); border: 1px solid var(--border-color); }
         .btn-secondary:hover { background-color: var(--primary-light); }
 
@@ -343,9 +383,9 @@
         .derivation-step { margin-bottom: 16px; padding-bottom: 16px; border-bottom: 1px solid var(--border-color); }
         .derivation-step:last-child { border-bottom: none; margin-bottom: 0; padding-bottom: 0; }
         .derivation-step .step-title { font-weight: 500; margin-bottom: 8px; color: var(--text-color); font-size: 0.9rem; }
-        .derivation-step .equation { background: white; padding: 12px; border-radius: 6px; font-size: 0.95rem; overflow-x: auto; }
+        .derivation-step .equation { background: var(--bg-card); padding: 12px; border-radius: 6px; font-size: 0.95rem; overflow-x: auto; }
         .derivation-step .inputs { display: flex; flex-wrap: wrap; gap: 8px; margin-top: 10px; }
-        .derivation-step .input-tag { background: white; border: 1px solid var(--border-color); padding: 4px 10px; border-radius: 20px; font-size: 0.8rem; font-family: var(--font-mono); }
+        .derivation-step .input-tag { background: var(--bg-card); border: 1px solid var(--border-color); padding: 4px 10px; border-radius: 20px; font-size: 0.8rem; font-family: var(--font-mono); color: var(--text-color); }
         .derivation-step .result-box { background: var(--accent-color); color: white; padding: 12px 16px; border-radius: 6px; margin-top: 12px; font-family: var(--font-mono); font-size: 1rem; }
         .derivation-step .result-box.good { background: var(--success-color); }
         .derivation-step .result-box.warning { background: var(--warning-color); color: var(--text-color); }
@@ -394,7 +434,7 @@
         }
         .gauge-explainer p { font-size: 0.9rem; margin-bottom: 10px; }
         .gauge-explainer .explainer-equation {
-            background: white;
+            background: var(--bg-card);
             padding: 10px;
             border-radius: 6px;
             margin-bottom: 10px;
@@ -407,12 +447,13 @@
             margin-bottom: 10px;
         }
         .gauge-explainer .value-tag {
-            background: white;
+            background: var(--bg-card);
             border: 1px solid var(--border-color);
             padding: 4px 10px;
             border-radius: 20px;
             font-size: 0.8rem;
             font-family: var(--font-mono);
+            color: var(--text-color);
         }
         .gauge-explainer .explainer-guidance {
             font-size: 0.85rem;
@@ -421,15 +462,15 @@
             margin-bottom: 0;
         }
         .gauge-explainer .explainer-guidance.good {
-            background: #d1fae5;
+            background: var(--callout-success-bg);
             color: var(--success-color);
         }
         .gauge-explainer .explainer-guidance.marginal {
-            background: #fef3c7;
+            background: var(--callout-warning-bg);
             color: var(--warning-color);
         }
         .gauge-explainer .explainer-guidance.bad {
-            background: #fef2f2;
+            background: var(--callout-danger-bg);
             color: var(--danger-color);
         }
 
@@ -453,8 +494,8 @@
            10. CHARTS
            ================================================================= */
         .chart-container { background: var(--bg-card); border: 1px solid var(--border-color); border-radius: var(--border-radius); padding: 18px; margin-bottom: 20px; }
-        .chart-container h4 { margin-bottom: 12px; font-size: 0.95rem; font-weight: 600; }
-        .chart-plot { width: 100%; min-height: 320px; }
+        .chart-container h4 { margin-bottom: 12px; font-size: 0.95rem; font-weight: 600; color: var(--text-color); }
+        .chart-plot { width: 100%; min-height: 350px; height: 350px; }
         .chart-explanation { margin-top: 12px; font-size: 0.85rem; color: var(--text-light); line-height: 1.5; padding: 10px; background: var(--primary-light); border-radius: 6px; }
         .chart-explanation strong { color: var(--text-color); }
         .charts-grid { display: grid; grid-template-columns: 1fr; gap: 20px; }
@@ -477,14 +518,14 @@
         .equation-card ul { list-style: none; padding-left: 0; display: grid; gap: 6px; font-size: 0.85rem; color: var(--text-light); }
 
         /* Callout boxes */
-        .callout-info { background: #dbeafe; border-left: 4px solid var(--accent-color); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; }
-        .callout-info strong { color: var(--accent-color); }
-        .callout-warning { background: #fef3c7; border-left: 4px solid var(--warning-color); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; }
-        .callout-warning strong { color: var(--warning-color); }
-        .callout-danger { background: #fef2f2; border-left: 4px solid var(--danger-color); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; }
-        .callout-danger strong { color: var(--danger-color); }
-        .callout-success { background: #d1fae5; border-left: 4px solid var(--success-color); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; }
-        .callout-success strong { color: var(--success-color); }
+        .callout-info { background: var(--callout-info-bg); border-left: 4px solid var(--callout-info-border); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; color: var(--text-color); }
+        .callout-info strong { color: var(--callout-info-border); }
+        .callout-warning { background: var(--callout-warning-bg); border-left: 4px solid var(--callout-warning-border); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; color: var(--text-color); }
+        .callout-warning strong { color: var(--callout-warning-border); }
+        .callout-danger { background: var(--callout-danger-bg); border-left: 4px solid var(--callout-danger-border); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; color: var(--text-color); }
+        .callout-danger strong { color: var(--callout-danger-border); }
+        .callout-success { background: var(--callout-success-bg); border-left: 4px solid var(--callout-success-border); padding: 12px 16px; margin: 16px 0; border-radius: 0 8px 8px 0; color: var(--text-color); }
+        .callout-success strong { color: var(--callout-success-border); }
 
         /* =================================================================
            12. SETTINGS PANEL
@@ -868,7 +909,7 @@
 
                         <div class="input-group">
                             <label for="cycles">Expected Duty Cycles</label>
-                            <input type="number" id="cycles" name="cycles" value="10000" step="1000" min="1">
+                            <input type="number" id="cycles" name="cycles" value="10000" step="any" min="1">
                             <span class="tooltip-trigger" data-tooltip="Expected number of load cycles over service life. Affects fatigue considerations in safety assessment.">?</span>
                         </div>
 
@@ -1341,6 +1382,17 @@
             document.getElementById(tabName).style.display = 'block';
             event.currentTarget.classList.add('active');
             typesetMath();
+
+            // Trigger Plotly resize when switching to chart tabs
+            if (tabName === 'visualization' || tabName === 'sensitivity') {
+                setTimeout(() => {
+                    const plotId = tabName === 'visualization' ? 'response-plot' : 'sensitivity-plot';
+                    const plotEl = document.getElementById(plotId);
+                    if (plotEl && plotEl.data) {
+                        Plotly.Plots.resize(plotEl);
+                    }
+                }, 100);
+            }
         }
 
         function typesetMath() {
@@ -1560,17 +1612,28 @@
                     include_correction
                 );
 
-                // Convert to JS object
-                lastResults = {};
-                for (let key of resultProxy.keys()) {
-                    let val = resultProxy.get(key);
-                    if (val && typeof val.toJs === 'function') {
-                        lastResults[key] = val.toJs();
-                    } else {
-                        lastResults[key] = val;
-                    }
-                }
+                // Convert to JS object with proper nested dict handling
+                lastResults = resultProxy.toJs({ dict_converter: Object.fromEntries });
                 resultProxy.destroy();
+
+                // Ensure nested objects are properly converted (arrays should be arrays, not Maps)
+                if (lastResults.response_curve) {
+                    lastResults.response_curve = Object.fromEntries(
+                        Object.entries(lastResults.response_curve).map(([k, v]) =>
+                            [k, Array.isArray(v) ? v : (v instanceof Map ? Array.from(v.values()) : v)]
+                        )
+                    );
+                }
+                if (lastResults.sensitivity_data) {
+                    lastResults.sensitivity_data = Object.fromEntries(
+                        Object.entries(lastResults.sensitivity_data).map(([k, v]) =>
+                            [k, Array.isArray(v) ? v : (v instanceof Map ? Array.from(v.values()) : v)]
+                        )
+                    );
+                }
+                if (lastResults.recommendations && lastResults.recommendations instanceof Map) {
+                    lastResults.recommendations = Array.from(lastResults.recommendations.values());
+                }
 
                 displayResults(lastResults, design_factor);
 
@@ -1741,8 +1804,18 @@
         }
 
         function plotResponseCurve(data) {
-            if (!data) return;
+            if (!data) {
+                console.warn('plotResponseCurve: no data provided');
+                return;
+            }
 
+            // Ensure arrays exist and have data
+            if (!data.x_values || !data.y_values || data.x_values.length === 0) {
+                console.warn('plotResponseCurve: missing or empty x_values/y_values', data);
+                return;
+            }
+
+            console.log('plotResponseCurve data:', data);
             const theme = getChartTheme();
 
             const traces = [
@@ -1770,8 +1843,18 @@
         }
 
         function plotSensitivity(data, designFactor) {
-            if (!data) return;
+            if (!data) {
+                console.warn('plotSensitivity: no data provided');
+                return;
+            }
 
+            // Ensure arrays exist and have data
+            if (!data.param_values || !data.output_values || data.param_values.length === 0) {
+                console.warn('plotSensitivity: missing or empty param_values/output_values', data);
+                return;
+            }
+
+            console.log('plotSensitivity data:', data, 'designFactor:', designFactor);
             const theme = getChartTheme();
 
             const traces = [
